@@ -1,6 +1,9 @@
              - Version 1.1
 ==========================
 * Made HTTP headers available to the endpoint.
+* Added handling of OPTINS method to support CORS requests.
+* Changed the behaviour of 'Access-Control-Allow-Origin' response header: it 
+will be added with a value of '*' only if not set by the endpoint.   
 
 June 4, 2014 - Version 1.0
 ==========================
